--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,13 @@ a {
   font-weight: 500;  
 }
 
+.button {
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  border: none;
+}
+
 .slider-text {
   font-size: 16px;
   line-height: 24px;
