--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,7 @@ regular 400
 medium 500
 bold 700
 */
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  overflow: hidden;
-}
+
 
 body {
   margin: 0;
@@ -26,7 +17,7 @@ body {
 }
 
 /*Заголовок h1 отображается только на внутренней странице */
-h1 {
+.title {
   font-size: 55px;
   line-height: 66x;
   font-weight: 500;  
@@ -36,7 +27,7 @@ a {
   text-decoration: none;
 }
 
-ul {
+.list-unstyled {
   list-style: none;
 }
 
@@ -94,17 +85,17 @@ a.cart:focus {
 }
 
 
-.slide:nth-of-child(1) {
+.slide:nth-of-type(1) {
   background-image: url("../img/nerds-index-slide1.png");
   background-repeat: no-repeat;
 }
 
-.slide:nth-of-child(2) {
+.slide:nth-of-type(2) {
   background-image: url("../img/nerds-index-slide2.png");
   background-repeat: no-repeat;
 }
 
-.slide:nth-of-child(3) {
+.slide:nth-of-type(3) {
   background-image: url("../img/nerds-index-slide3.png");
   background-repeat: no-repeat;
 }
@@ -257,11 +248,11 @@ a.cart:focus {
 
 .stydio-table-percent > td {
   font-size: 45px;
-  line-height: 10px;
+  line-height: 54px;
   font-weight: 700;		
 }
 
-tr {
+.stydio-table-percent tr {
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;			
@@ -485,5 +476,14 @@ tr {
   border: none;
 }
 
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
 
