--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@ a { text-decoration: none; }
   display: block;
 }
 
+.main-header-logo:hover img,
+.main-header-logo:focus img {
+	 opacity: 0.8;
+}
+
+.main-header-logo:active img {
+	 opacity: 0.3;
+}
+
 /* 
   Добавили обертку для навигации сайта 
   и корзины для выравнивания по вертикали
