--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ a { text-decoration: none; }
 .button:active,
 .button:focus { color: rgba(255, 255, 255, 0.3); }
 
+
+
 /* Блок центровщик*/
 .container {
   width: 1160px;
@@ -67,10 +69,8 @@ a { text-decoration: none; }
   display: flex;
   flex-direction: column;
   margin-bottom: 82px;
-  padding-top: 48px;
   /* Временно для сетки */
-  min-height: 543px;
-  /* серый фон блока с меню и слайдера*/
+  min-height: 545px;
   background-color: #eeeeee;
 }
 
@@ -78,8 +78,9 @@ a { text-decoration: none; }
 .main-navigation {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-
+  align-items: flex-start;
+  padding-top: 50px;
+  min-height: 70px;
   background-color: #eeeeee;
 }
 
@@ -106,13 +107,17 @@ a { text-decoration: none; }
 .main-navigation-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  margin-top: 33px;
   width: 800px;
-  min-height: 50px;
+  min-height: 37px;
 }
 
 /* установили ширину из шаблона и запихали в эту ширину список из пунктов меню*/
 .site-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding:0;
   margin: 0;
   width: 440px;
@@ -124,21 +129,25 @@ a { text-decoration: none; }
     добавили отступ слева для элементов
 */
 .site-navigation li {
-  margin-left:  42px;
-  display: inline;
+  margin-left:  45px;
+  height: 38px;
+  text-align: left;
 }
-
-/* убрали отступ слева для первого элемента*/
-.site-navigation li:first-child { margin-left: 0; }
+/* Уберем отступ у 1 и каждого 5-го элемента */
+.site-navigation li:nth-of-type(4n+1) {
+  margin-left: 0;
+}
 
 /* состояния для ссылок в меню*/
 /* покой*/
 .site-navigation a,
 a.cart {
+  padding-bottom: 10px;
   font-size: 16px;
   line-height: 30px;
   color: #000000;
   font-weight: 500;
+  border-bottom: 2px solid transparent;
 }
 
 /* наведение*/
@@ -158,7 +167,7 @@ a.cart:focus {
 /* активный, находимся на странице */
 .site-navigation a.active,
 a.cart.active {
-  border-bottom: 2px solid #fb565a;
+  border-color: #fb565a;
 }
 
 a.cart {
@@ -175,6 +184,7 @@ a.cart {
 }
 
 .slide {
+  min-height: 430px;
 }
 
 .slide:nth-of-type(1) {
@@ -221,20 +231,24 @@ a.cart {
 
 /* Раздел Услуги */
 .services {
-  /* временно для сетки */
+  min-height: 350px;
+  margin-bottom: 80px;
 }
 
 .services-list {
   display:flex;
   justify-content: space-between;
-  min-height: 500px;
+  flex-wrap: wrap;
 }
 
 .service-site,
 .service-application, 
 .service-presentation {
-	width:305px;
+  padding-top: 150px;
+  width: 305px;
+  min-height: 178px;
 }
+
 /* заголовки в наименованиях всех услуг */
 .services h3 {
   font-size: 24px;
@@ -267,7 +281,6 @@ a.cart {
 
 .order-site-button:active{
   background-color: #d7373b;
-  
 }
 
 /* блок правил для заказа приложения*/
@@ -309,11 +322,18 @@ a.cart {
 /* Секция "О нас" */
 .studio {
   display: flex;
-  min-height: 500px;
+  justify-content: space-between;
+  margin-bottom: 72px;
+  padding-top: 42px;
+  min-height: 415px;
   border-top: 2px solid #eeeeee;
 }
 
 /* блок правил раздела Студия*/
+.studio-left {
+  width: 760px;
+}
+
 .studio-left b {
   font-size: 45px;
   line-height: 50.4px;
@@ -341,7 +361,8 @@ a.cart {
 
 .studio-right {
   /* Примерно для сетки*/
-  padding-top: 370px;
+  padding-top: 245px;
+  width: 380px;
   background-image: url("../img/nerds-illustration.jpg");
   background-repeat: no-repeat;
 }
@@ -365,11 +386,21 @@ a.cart {
   font-weight: 400;     
 }
 
+
 /* Секция "Партнеры"*/
+.partners {
+  min-height: 180px;
+  margin-bottom: 80px;
+  border-style: solid;
+  border-width: 2px 0;
+  border-color: #eeeeee;
+}
 
 .partner-list {
   display: flex;
-  min-height: 200px;	
+  justify-content: space-between;
+  align-items: stretch;
+  min-height: 180px;	
 }
 
 /*Состояния для изображений логотипов партнёров*/
@@ -391,14 +422,18 @@ a.cart {
 }
 
 .footer-map {
-  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 70px;
+  max-width: 1440px;
+  min-height: 415px;
 }
 
 .footer-social {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 70px;
+  min-height: 80px;
 }
 
 
@@ -411,6 +446,11 @@ a.cart {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px;
+  width: 220px;
+  min-height: 210px;
+
+  background-color: #ffffff;
 }
 
 /* блок правил для футера*/
@@ -452,6 +492,13 @@ a.cart {
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;	
+}
+
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 260px;
 }
 
 .social-button-vk {
@@ -540,15 +587,29 @@ a.cart {
 .inner-page .main-header {
   min-height: 355px;
 }
+
+.inner-page .main-navigation { 
+  margin-bottom: 75px; 
+}
 /*Заголовок h1 отображается только на внутренней странице */
 .title {
+  margin-top: 0;
   text-align: center;
   font-size: 55px;
   line-height: 66x;
-  font-weight: 500;  
+  font-weight: 500;
+}
+
+.catalog {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Фильтр*/
+.template-filter {
+  width: 260px;
+}
+
 .template-filter fieldset,
 .template-filter input {
   border: none;
@@ -592,6 +653,17 @@ a.cart {
   color: #e48789;
 }
 
+.sort {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sort-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 360px;
+}
+
 .sort a {
   font-size: 14px;
   line-height: 18px;
@@ -604,11 +676,29 @@ a.cart {
 }
 
 /* каталог*/
-.selected-item {
+
+.templates {
+  width: 760px;
+}
+
+.templates-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.catalog-item {
+  margin-bottom: 35px;
+  width: 360px;
+  min-height: 230px;
+}
+
+.selected-item .catalog-item-text {
+  box-sizing: border-box;
+  width: 100%;
   background-color: #eeeeee;
 }
 
-.catalog-item a {
+.catalog-item .templates-title {
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
@@ -645,14 +735,20 @@ a.cart {
   border: none;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
-  padding: 0;
   border: 0;
-  clip: rect(0, 0, 0, 0);
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
