--- a/css/style.css
+++ b/css/style.css
@@ -444,15 +444,18 @@ a.cart {
   min-height: 100px;
 }
 
-.contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
-  width: 220px;
-  min-height: 210px;
+.footer-map {
+  position:relative;	
+}
 
+.contacts {
+  position: absolute;
+  top: 54px;
+  z-index: 1;
+  padding: 50px;
+  width: 318px;
   background-color: #ffffff;
+  box-sizing: border-box;
 }
 
 /* блок правил для футера*/
@@ -470,8 +473,14 @@ a.cart {
 }
 
 .write-button {
+  margin-top: 17px;
+  margin-bottom: 47px;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
   background-color: #fb565a;
   color: #ffffff;
+  width:220px;
 }
 
 .write-button:hover {
