--- a/css/style.css
+++ b/css/style.css
@@ -493,24 +493,61 @@ a.cart {
   color: #e48789;
 }
 
-.footer-social b {
-  font-size: 36px;
-  line-height: 43.2px;
-  font-weight: 700;
+.footer-social {
+	display: flex;
+	padding: 70px 0;
 }
 
-.footer-social p {
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 400;	
+
+.social-text b {
+	margin: 0;
+	margin-top: 6px;
+	margin-bottom: 9px;
+	font-size: 36px;
+	line-height: 36px;
+	color: #000000;
+	font-weight: 700;
 }
+
+.social-text p {
+	margin: 0;
+	font-size: 16px;
+	line-height: 22px;
+	color: #444444;
+	font-weight: 400;
+}
+
+
 
 
 .social-list {
-  display: flex;
-  justify-content: space-between;
-  width: 260px;
+	display: flex;
+	justify-content: space-between;
+	width: 260px;
+	margin: 0;
+	margin-right: 140px;
+	padding: 0;
 }
+
+.social-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 78px;
+	height: 78px;
+	background-color: #e1e1e1;
+	border-radius: 50%;
+}
+
+.social-button:hover {
+	background-color: #e74246;
+}
+
+.social-button:focus {
+	background-color: #d7373b;
+	fill-opacity: 0.3;
+}
+
 
 .social-button-vk {
   background-image: url("../img/vk-icon.svg");
